tests/samples/negative/types/bit_cast_size_mismatch.ax
module bit_cast_size_mismatch;

fn main() -> i32 {
    let value: u64 = bit_cast(u64, cast(u32, 1));
    return cast(i32, value);
}
